fixed max-content not working on firefox

--- a/sass/_common/util.scss
+++ b/sass/_common/util.scss
@@ -46,6 +46,7 @@ a {
   margin: auto;
 
   &.using-max-content {
+    width: -moz-fit-content;
     width: max-content;
   }
 }
